# osdev-vs-template

./: .gitignore  CMakeLists.txt  CMakeSettings.json  readme.md  toolchain.cmake
slug_kernel/: CMakeLists.txt  boot_image.cmake  limine.cfg  linker.ld
slug_kernel/src/: entry.cpp
